# any2bibtex

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
backend/: build.py  main.py  requirements.txt  resolvers.py  semantic_scholar.py
electron/: main.js  preload.js
scripts/: create-updater-manifest.mjs
src/: App.vue  electron.d.ts  env.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  resolver.rs  settings.rs
src/components/: ApiKeyPanel.vue  ResultCard.vue  SearchBar.vue  UpdatePanel.vue
src/services/: desktop.ts  updater.ts
src/utils/: bibtex.ts
